--- a/text.html
+++ b/text.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/text.css" />
+    <link rel="stylesheet" href="./css/text.css" />
   </head>
   <body>
     <div class="bubble">
@@ -51,13 +51,13 @@
               opacity: 0,
               duration: 1,
               onComplete: function() {
-                window.location.href = "card.html";
+                window.location.href = "./card.html";
               }
             });
           }, 2000); 
         }
       });
     </script>
-    <script src="/js/text.js"></script>
+    <script src="./js/text.js"></script>
   </body>
 </html>
