changed image path

--- a/card.html
+++ b/card.html
@@ -21,7 +21,7 @@
       <div class="cardFront">
         <h3 class="happy">Happy Birthday Moyo!!</h3>
         <div class="herPhoto">
-          <img src="/Images/img10.jpg" alt="" />
+          <img src="./Images/img10.jpg" alt="" />
         </div>
         <div class="balloons">
           <div class="balloonOne"></div>
