--- a/index.html
+++ b/index.html
@@ -92,26 +92,26 @@
     
     <section class="image-section">
       <div class="image-list">
-        <img class="image" src="/Images/img10.jpg" alt="img" />
-        <img class="image" src="/Images/img11.jpg" alt="img" />
-        <img class="image" src="/Images/img12.jpg" alt="img" />
-        <img class="image" src="/Images/img13.jpg" alt="img" />
-        <img class="image" src="/Images/img14.jpg" alt="img" />
-        <img class="image" src="/Images/img15.jpg" alt="img" />
-        <img class="image" src="/Images/img16.jpg" alt="img" />
-        <img class="image" src="/Images/img17.jpg" alt="img" />
-        <img class="image" src="/Images/img18.jpg" alt="img" />
-        <img class="image" src="/Images/img19.jpg" alt="img" />
-        <img class="image" src="/Images/img20.jpg" alt="img" />
-        <img class="image" src="/Images/img21.jpg" alt="img" />
-        <img class="image" src="/Images/img1.jpg" alt="img" />
-        <img class="image" src="/Images/img2.jpg" alt="img" />
-        <img class="image" src="/Images/img3.jpg" alt="img" />
-        <img class="image" src="/Images/img4.jpg" alt="img" />
-        <img class="image" src="/Images/img5.jpg" alt="img" />
-        <img class="image" src="/Images/img6.jpg" alt="img" />
-        <img class="image" src="/Images/img7.jpg" alt="img" />
-        <img class="image" src="/Images/img8.jpg" alt="img" />
+        <img class="image" src="./Images/img10.jpg" alt="img" />
+        <img class="image" src="./Images/img11.jpg" alt="img" />
+        <img class="image" src="./Images/img12.jpg" alt="img" />
+        <img class="image" src="./Images/img13.jpg" alt="img" />
+        <img class="image" src="./Images/img14.jpg" alt="img" />
+        <img class="image" src="./Images/img15.jpg" alt="img" />
+        <img class="image" src="./Images/img16.jpg" alt="img" />
+        <img class="image" src="./Images/img17.jpg" alt="img" />
+        <img class="image" src="./Images/img18.jpg" alt="img" />
+        <img class="image" src="./Images/img19.jpg" alt="img" />
+        <img class="image" src="./Images/img20.jpg" alt="img" />
+        <img class="image" src="./Images/img21.jpg" alt="img" />
+        <img class="image" src="./Images/img1.jpg" alt="img" />
+        <img class="image" src="./Images/img2.jpg" alt="img" />
+        <img class="image" src="./Images/img3.jpg" alt="img" />
+        <img class="image" src="./Images/img4.jpg" alt="img" />
+        <img class="image" src="./Images/img5.jpg" alt="img" />
+        <img class="image" src="./Images/img6.jpg" alt="img" />
+        <img class="image" src="./Images/img7.jpg" alt="img" />
+        <img class="image" src="./Images/img8.jpg" alt="img" />
       </div>
     </section>
 
