changes the second oage path

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </section>
 
     <div class="buttonContainer">
-      <a href="/text.html">
+      <a href="./text.html">
         <button class="myButton" onclick="redirectToPage()">
           <span style="font-size: 1.2rem;   font-family: 'Dosis';">Tap Me!!</span>
         </button>
