--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
         <p class="date">May 13</p>
       </nav>
 
-      
       <span id="typed-text" class="text"></span>
     </div>
-    
+
     <section class="image-section">
       <div class="image-list">
         <img class="image" src="./Images/img10.jpg" alt="img" />
@@ -116,11 +115,9 @@
     </section>
 
     <div class="buttonContainer">
-      <a href="./components/text.html">
-        <button class="myButton" onclick="redirectToPage()">
-          <span style="font-size: 1.2rem;   font-family: 'Dosis';">Tap Me!!</span>
-        </button>
-      </a>
+      <button class="myButton" onclick="window.location.href = 'text.html';">
+        <span style="font-size: 1.2rem; font-family: 'Dosis'">Tap Me!!</span>
+      </button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
