--- a/text.html
+++ b/text.html
@@ -51,7 +51,7 @@
               opacity: 0,
               duration: 1,
               onComplete: function () {
-                window.location.href = "./components/card.html";
+                window.location.href = "card.html";
               },
             });
           }, 2000);
