added a few images

--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
 
     <section class="image-section">
       <div class="image-list">
+        <img class="image" src="./Images/img22.jpg" alt="img" />
         <img class="image" src="./Images/img10.jpg" alt="img" />
         <img class="image" src="./Images/img11.jpg" alt="img" />
         <img class="image" src="./Images/img12.jpg" alt="img" />
         <img class="image" src="./Images/img13.jpg" alt="img" />
         <img class="image" src="./Images/img14.jpg" alt="img" />
         <img class="image" src="./Images/img15.jpg" alt="img" />
+        <img class="image" src="./Images/img23.jpg" alt="img" />
         <img class="image" src="./Images/img16.jpg" alt="img" />
         <img class="image" src="./Images/img17.jpg" alt="img" />
         <img class="image" src="./Images/img18.jpg" alt="img" />
